tests/expectations/compiler/operations/add_type_fail.out
DCE_ENABLED:
Error [ETYC0372117]: Expected a field, group, scalar, or integer but type `bool` was found.
    --> compiler-test:4:17
     |
   4 |         return (true + false) as u8;
     |                 ^^^^
Error [ETYC0372117]: Expected a field, group, scalar, or integer but type `bool` was found.
    --> compiler-test:4:24
     |
   4 |         return (true + false) as u8;
     |                        ^^^^^

DCE_DISABLED:
Error [ETYC0372117]: Expected a field, group, scalar, or integer but type `bool` was found.
    --> compiler-test:4:17
     |
   4 |         return (true + false) as u8;
     |                 ^^^^
Error [ETYC0372117]: Expected a field, group, scalar, or integer but type `bool` was found.
    --> compiler-test:4:24
     |
   4 |         return (true + false) as u8;
     |                        ^^^^^
